--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="../src/Gramado.jpg" alt="Imagem de Gramado">
     </main>
 
-    <!-- Rodapé -->
+    <!-- Rodape -->
     <footer>
         <p>&copy; 2024 Jeanderson Wylis dos Santos</p>
     </footer>
